--- a/src/app/common/paging/quick-filters/quick-filters.component.html
+++ b/src/app/common/paging/quick-filters/quick-filters.component.html
@@ -3,7 +3,7 @@
 		<span class="collapsible" (click)="shown = !shown">
 			<span class="quick-select-title">
 				{{ title }}
-				<i class="fa fa-fw" [ngClass]="{ 'fa-caret-up': shown, 'fa-caret-down': !shown }"></i>
+				<span class="fa fa-fw" [ngClass]="{ 'fa-caret-up': shown, 'fa-caret-down': !shown }"></span>
 			</span>
 		</span>
 	</div>
