--- a/src/app/common/system-alert/system-alert-icon.component.html
+++ b/src/app/common/system-alert/system-alert-icon.component.html
@@ -1,5 +1,5 @@
 <div class="alert-icon" [ngSwitch]="icon">
-	<div *ngSwitchCase="'success'"><i class="fa fa-fw fa-check-circle"></i></div>
-	<div *ngSwitchCase="'warning'"><i class="fa fa-fw fa-exclamation"></i></div>
-	<div *ngSwitchCase="'danger'"><i class="fa fa-fw fa-exclamation-triangle"></i></div>
+	<span *ngSwitchCase="'success'" class="fa fa-fw fa-check-circle"></span>
+	<span *ngSwitchCase="'warning'" class="fa fa-fw fa-exclamation"></span>
+	<span *ngSwitchCase="'danger'" class="fa fa-fw fa-exclamation-triangle"></span>
 </div>
