--- a/src/app/core/admin/cache-entries/cache-entry-modal.component.html
+++ b/src/app/core/admin/cache-entries/cache-entry-modal.component.html
@@ -2,7 +2,7 @@
 	<h3>
 		Cache Entry Details
 	</h3>
-	<span class="pull-right">
+	<span class="float-right">
 		<button type="button" class="btn btn-link"
 			(click)="modalRef.hide()"
 			data-tooltip="Close"
