--- a/src/app/core/feedback/feedback-modal.component.html
+++ b/src/app/core/feedback/feedback-modal.component.html
@@ -7,17 +7,17 @@
 <section class="modal-body">
 	<div class="row form-group">
 		<label class="col-md-12">What type of feedback would you like to leave?</label>
-		<div class="col-md-12 col-sm-12 col-xs-12 pull-left btn-group" dropdown>
+		<div class="col-md-12 col-sm-12 col-xs-12 float-left btn-group" dropdown>
 			<button style="text-align: left;" type="button" class="form-control dropdown-toggle-secondary" dropdownToggle>
-				<span class="pull-left hide-overflow selected-option">{{ selectedOption.name }}</span>
-				<span class="pull-right">
-					<span class="caret"></span>
+				<span class="float-left hide-overflow selected-option">{{ selectedOption.name }}</span>
+				<span class="float-right">
+					<span class="fa fa-caret-down"></span>
 				</span>
 			</button>
 
 			<ul *dropdownMenu class="dropdown-menu full-width-menu" role="menu">
 				<li *ngFor="let type of allTypeOption" (click)="selectedOption = type">
-					<a class="no-href">{{ type.name }}</a>
+					<a class="dropdown-item" tabindex="0">{{ type.name }}</a>
 				</li>
 			</ul>
 		</div>
@@ -25,17 +25,17 @@
 
 	<div *ngIf="classificationOptions" class="row form-group">
 		<label class="col-md-12">Select classification level for your feedback:</label>
-		<div class="col-md-12 col-sm-12 col-xs-12 pull-left btn-group" dropdown>
+		<div class="col-md-12 col-sm-12 col-xs-12 float-left btn-group" dropdown>
 			<button style="text-align: left;" type="button" class="form-control dropdown-toggle-secondary" dropdownToggle>
-				<span class="pull-left hide-overflow selected-option">{{ selectedClassification?.level }}</span>
-				<span class="pull-right">
-					<span class="caret"></span>
+				<span class="float-left hide-overflow selected-option">{{ selectedClassification?.level }}</span>
+				<span class="float-right">
+					<span class="fa fa-caret-down"></span>
 				</span>
 			</button>
 
 			<ul *dropdownMenu class="dropdown-menu full-width-menu" role="menu">
 				<li *ngFor="let opt of classificationOptions" (click)="selectedClassification = opt">
-					<a class="no-href">{{ opt?.level }}</a>
+					<a class="dropdown-item" tabindex="0">{{ opt?.level }}</a>
 				</li>
 			</ul>
 		</div>
@@ -56,16 +56,16 @@
 
 <section class="modal-footer">
 	<div class="row">
-		<div *ngIf="error" class="col-md-12 pull-right text-danger">
+		<div *ngIf="error" class="col-md-12 float-right text-danger">
 			<strong>{{ error }}</strong>
 		</div>
-		<div *ngIf="success" class="col-md-12 pull-right text-success">
+		<div *ngIf="success" class="col-md-12 float-right text-success">
 			<strong>{{ success }}</strong>
 		</div>
 	</div>
 
 	<div class="row padding-top-5">
-		<div class="col-md-12 pull-right">
+		<div class="col-md-12 float-right">
 			<button type="button" class="btn btn-secondary" (click)="modalRef.hide()">Cancel</button>
 			<button class="btn btn-primary btn-spacing-right-aligned" [disabled]="submitting" (click)="submit()">Submit</button>
 		</div>
