--- a/src/app/core/site-navbar/site-navbar.component.html
+++ b/src/app/core/site-navbar/site-navbar.component.html
@@ -29,7 +29,7 @@
 			   [isDisabled]="navbarOpen"
 			   routerLinkActive="active-link"
 			   routerLink="/explore">
-				<i class="fa fa-fw fa-compass"></i>
+				<span class="fa fa-fw fa-compass"></span>
 				<span [hidden]="!navbarOpen">Explore</span>
 			</a>
 		</li>
@@ -40,7 +40,7 @@
 			   [isDisabled]="navbarOpen"
 			   routerLinkActive="active-link"
 			   routerLink="/search">
-				<i class="fa fa-fw fa-search"></i>
+				<span class="fa fa-fw fa-search"></span>
 				<span [hidden]="!navbarOpen">Search</span>
 			</a>
 		</li>
@@ -61,7 +61,7 @@
 			   [outsideClick]="true"
 			   (onShown)="userNavOpen = true;"
 			   (onHidden)="userNavOpen = false;">
-				<i class="fa fa-fw fa-user-circle"></i>
+				<span class="fa fa-fw fa-user-circle"></span>
 				<span [hidden]="!navbarOpen">{{ session?.name }}</span>
 			</a>
 
@@ -86,7 +86,7 @@
 			[outsideClick]="true"
 			(onShown)="adminNavOpen = true;"
 			(onHidden)="adminNavOpen = false;">
-				<i class="fa fa-fw fa-cog"></i>
+				<span class="fa fa-fw fa-cog"></span>
 				<span [hidden]="!navbarOpen">Admin</span>
 			</a>
 
@@ -112,7 +112,7 @@
 			   [outsideClick]="true"
 			   (onShown)="helpNavOpen = true;"
 			   (onHidden)="helpNavOpen = false;">
-				<i class="fa fa-fw fa-question-circle"></i>
+				<span class="fa fa-fw fa-question-circle"></span>
 				<span [hidden]="!navbarOpen">Help</span>
 			</a>
 
@@ -146,9 +146,9 @@
 		<li class="element "
 				(click)="toggleNavbar()">
 			<a>
-				<i class="fa fa-fw"
+				<span class="fa fa-fw"
 				   [class.fa-angle-double-right]="!navbarOpen"
-				   [class.fa-angle-double-left]="navbarOpen"></i>
+				   [class.fa-angle-double-left]="navbarOpen"></span>
 				<span [hidden]="!navbarOpen">Collapse</span>
 			</a>
 		</li>
