--- a/src/app/common/modal/modal.component.html
+++ b/src/app/common/modal/modal.component.html
@@ -1,5 +1,5 @@
 <div class="modal-header">
-	<h3 class="modal-title pull-left">{{ title }}</h3>
+	<h3 class="modal-title float-left">{{ title }}</h3>
 </div>
 <div class="modal-body word-wrap" [innerHtml]="message"></div>
 <div class="modal-footer">
