--- a/src/app/common/paging/pager/pager.component.html
+++ b/src/app/common/paging/pager/pager.component.html
@@ -2,41 +2,41 @@
 <div *ngIf="totalSize > 0 || (totalSize == null && (currentSize > 0) || pageNumber != 0); else invalidPage">
 
 	<span *ngIf="showSortingControls" style="display: inline-block">
-		<a type="button" class="no-href btn-link" tooltip="Newest on Top" [hidden]="sortdir==='DESC'" (click)="sort('DESC')"><i class="fa fa-sort-amount-desc"></i></a>
-		<a type="button" class="no-href btn-link" tooltip="Oldest on Top" [hidden]="sortdir==='ASC'" (click)="sort('ASC')"><i class="fa fa-sort-amount-asc"></i></a>
+		<a type="button" class="no-href btn-link" tooltip="Newest on Top" [hidden]="sortdir==='DESC'" (click)="sort('DESC')"><span class="fa fa-sort-amount-desc"></span></a>
+		<a type="button" class="no-href btn-link" tooltip="Oldest on Top" [hidden]="sortdir==='ASC'" (click)="sort('ASC')"><span class="fa fa-sort-amount-asc"></span></a>
 	</span>
 
 	<span class="pager-controls">
 		<!-- Count message -->
 		<span class="pager-status">
 			{{startFormatted}} - {{endFormatted}} of {{totalFormatted}}
-			<i style="color: #ffbd5c" class="fa fa-warning"
+			<span style="color: #ffbd5c" class="fa fa-warning"
 				*ngIf="showCountWarning"
 				tooltip="{{ countWarningMessage }}"
-			></i>
+			></span>
 		</span>
 
 		<!-- Paging controls -->
 		<a type="button" class="no-href btn-link"
 			[hidden]="totalPages <= 1"
 			(click)="goToPage(0)">
-			<i class="fa fa-angle-double-left"></i>
+			<span class="fa fa-angle-double-left"></span>
 		</a>
 		<a type="button" class="no-href btn-link"
 			[hidden]="totalPages <= 1"
 			(click)="goToPage(pageNumber - 1)">
-			<i class="fa fa-angle-left"></i>
+			<span class="fa fa-angle-left"></span>
 		</a>
 		<a type="button" class="no-href btn-link"
 			[hidden]="totalPages <= 1 || (pageNumber + 1) >= totalPages || currentSize !== pageSize"
 			(click)="goToPage(pageNumber + 1)">
-			<i class="fa fa-angle-right"></i>
+			<span class="fa fa-angle-right"></span>
 		</a>
 		<a type="button" class="no-href btn-link"
 			[hidden]="totalPages <= 1 || (pageNumber + 1) >= totalPages || currentSize !== pageSize"
 			(click)="goToPage(totalPages - 1)"
 			*ngIf="!disableGoToEnd">
-			<i class="fa fa-angle-double-right"></i>
+			<span class="fa fa-angle-double-right"></span>
 		</a>
 	</span>
 
