--- a/src/app/common/paging/sortable-table-header/sortable-table-header.component.html
+++ b/src/app/common/paging/sortable-table-header/sortable-table-header.component.html
@@ -1,10 +1,10 @@
 <span *ngIf="header" class="sortable-table-header hide-overflow limit-width-cell" [ngClass]="{'sortable': sortable}" tooltip="{{ sortable ? header.tooltip : ''}}" (click)="sort()" placement="top" container="body">
 	{{ header?.name }}
-	<span *ngIf="sortable">
-		<span *ngIf="currentSortField === header.sortField">
-			<span *ngIf="currentSortDir === 'DESC'"><i class="fa fa-lg fa-sort-desc"></i></span>
-			<span *ngIf="currentSortDir === 'ASC'"><i class="fa fa-lg fa-sort-asc"></i></span>
-		</span>
-		<span *ngIf="currentSortField !== header.sortField"><i class="fa fa-sort"></i></span>
-	</span>
+	<ng-container *ngIf="sortable">
+		<ng-container *ngIf="currentSortField === header.sortField">
+			<span *ngIf="currentSortDir === 'DESC'" class="fa fa-lg fa-sort-desc"></span>
+			<span *ngIf="currentSortDir === 'ASC'" class="fa fa-lg fa-sort-asc"></span>
+		</ng-container>
+		<span *ngIf="currentSortField !== header.sortField" class="fa fa-sort"></span>
+	</ng-container>
 </span>
