--- a/src/app/core/admin/cache-entries/cache-entries.component.html
+++ b/src/app/core/admin/cache-entries/cache-entries.component.html
@@ -32,7 +32,7 @@
 			<td class="hide-overflow" style="max-width: 300px;">{{cacheEntry.entry.value | json}}</td>
 			<td><span [attr.title]="cacheEntry.entry.ts | utcDate">{{cacheEntry.entry.ts | agoDate:false}}</span></td>
 			<td style="width: 120px;">
-				<div class="btn-group btn-group-sm pull-right">
+				<div class="btn-group btn-group-sm float-right">
 					<button title="View Entry" (click)="viewCacheEntry(cacheEntry)"
 						type="button" class="btn btn-outline-secondary">
 						<span class="fa fa-eye"></span>
