--- a/src/app/core/feedback/admin/admin-list-feedback.component.html
+++ b/src/app/core/feedback/admin/admin-list-feedback.component.html
@@ -13,7 +13,7 @@
 			<!-- Export -->
 			<div class="row">
 				<div class="col-md-12 form-group">
-					<div class="btn-group pull-right dropdown">
+					<div class="btn-group float-right dropdown">
 						<button type="button" class="btn btn-sm btn-outline-secondary" (click)="export()">
 							<span class="fa fa-download"></span> Export
 						</button>
