--- a/src/app/core/feedback/feedback-modal.component.html
+++ b/src/app/core/feedback/feedback-modal.component.html
@@ -65,9 +65,11 @@
 	</div>
 
 	<div class="row padding-top-5">
-		<div class="col-md-12 float-right">
-			<button type="button" class="btn btn-secondary" (click)="modalRef.hide()">Cancel</button>
-			<button class="btn btn-primary btn-spacing-right-aligned" [disabled]="submitting" (click)="submit()">Submit</button>
+		<div class="col-md-12">
+			<div class="btn-group float-right">
+				<button type="button" class="btn btn-outline-secondary" (click)="modalRef.hide()">Cancel</button>
+				<button type="button" class="btn btn-primary" [disabled]="submitting" (click)="submit()">Submit</button>
+			</div>
 		</div>
 	</div>
 </section>
