maintain session after page reload

--- a/src/app/core/site-navbar/site-navbar.component.html
+++ b/src/app/core/site-navbar/site-navbar.component.html
@@ -69,7 +69,7 @@
 				<ul class="popover-menu" role="menu">
 
 					<!-- User Signout -->
-					<li [hidden]="pki"><a href="/auth/signout">Sign out</a></li>
+					<li [hidden]="pki"><a href="/api/auth/signout">Sign out</a></li>
 
 				</ul>
 			</ng-template>
