add 'isAuthenticated' directive

--- a/src/app/core/site-navbar/site-navbar.component.html
+++ b/src/app/core/site-navbar/site-navbar.component.html
@@ -53,7 +53,7 @@
 
 		<!-- User Nav	-->
 		<li class="element nav-popover nav-popover-bottom"
-			*hasRole="'user'">
+			*isAuthenticated>
 			<a [ngClass]="{'highlight-link': userNavOpen}"
 			   [popover]="userNav"
 			   #userNavPopover="bs-popover"
