added inactive/unauthorized components. wip on eua acceptance

--- a/src/app/core/admin/user-management/manage-user.component.html
+++ b/src/app/core/admin/user-management/manage-user.component.html
@@ -151,7 +151,7 @@
 
 		<!-- Validation errors -->
 		<div class="form-group row" [hidden]="!error">
-			<div class="col-md-offset-2 col-md-10">
+			<div class="offset-2 col-md-10">
 				<div class="text-danger">
 					<strong>{{error}}</strong>
 				</div>
