--- a/src/styles.scss
+++ b/src/styles.scss
@@ -11,6 +11,9 @@
 // Import the main ngx-bootstrap style file
 @import 'styles/ngx-bootstrap';
 
+// Import ng-select style file
+@import "~@ng-select/ng-select/scss/default.theme";
+
 body {
 	@include font-normal();
 	@include font-color-dark($ux-color-body-text);
@@ -24,4 +27,10 @@ body {
 
 html {
 	min-height: 100%;
+}
+
+.form-required:before {
+	content: '*';
+	color: $red;
+	padding-right: 3px;
 }
