--- a/src/styles/ngx-bootstrap/_tooltips.scss
+++ b/src/styles/ngx-bootstrap/_tooltips.scss
@@ -4,10 +4,10 @@
 @import '../typography';
 
 
-$tooltip-background-color: fade-out(map-get($color-background, 'darkest'), .4);
-$tooltip-border-radius: $border-radius;
-$tooltip-font-color: map-get($color-background, 'darkest-contrast');
-$tooltip-font-size: 14px;
+$tooltip-background-color: fade-out(map-get($color-background, 'darkest'), .4) !default;
+$tooltip-border-radius: $border-radius !default;
+$tooltip-font-color: map-get($color-background, 'darkest-contrast') !default;
+$tooltip-font-size: 14px !default;
 
 .tooltip {
 	.tooltip-inner {
