--- a/src/app/core/site-container/site-container.component.scss
+++ b/src/app/core/site-container/site-container.component.scss
@@ -1,3 +1,4 @@
+@import '../../../styles/overrides';
 @import '../../../styles/colors';
 @import './shared';
 
@@ -17,20 +18,20 @@ footer.site-footer {
 }
 
 .copyright-banner {
-	background-color: map-get($color-background, 'default');
-	color: map-get($color-background, 'default-contrast');
+	background-color: $copyright-banner-bg;
+	color: $copyright-banner-color;
 	height: $copyright-banner-height;
 }
 
 .footer-banner {
-	background-color: map-get($color-background, 'darkest');
-	color: map-get($color-background, 'darkest-contrast');
+	background-color: $footer-banner-bg;
+	color: $footer-banner-color;
 	height: $footer-banner-height;
 }
 
 .header-banner {
-	background-color: map-get($color-background, 'darkest');
-	color: map-get($color-background, 'darkest-contrast');
+	background-color: $header-banner-bg;
+	color: $header-banner-color;
 	height: $header-banner-height;
 }
 
