--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,3 +1,4 @@
+@import 'styles/overrides';
 @import 'styles/globals';
 @import 'styles/colors';
 @import 'styles/mixins';
@@ -14,7 +15,9 @@
 
 body {
 	@include font-normal();
-	@include font-color-dark();
+	@include font-color-dark($ux-body-text);
+
+	background: $ux-background;
 
 	padding: 0;
 	margin: 0;
